--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -4,12 +4,12 @@ http://ionicframework.com/docs/theming/ */
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #eb445a;
-  --ion-color-primary-rgb: 235, 68, 90;
-  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary: #000;
+  --ion-color-primary-rgb: 0, 0, 0;
+  --ion-color-primary-contrast: #fff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #cf3c4f;
-  --ion-color-primary-tint: #ed576b;
+  --ion-color-primary-shade: rgb(63, 61, 61);
+  --ion-color-primary-tint: #000;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
