--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -8,7 +8,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-primary-rgb: 0, 0, 0;
   --ion-color-primary-contrast: #fff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: rgb(63, 61, 61);
+  --ion-color-primary-shade: #000;
   --ion-color-primary-tint: #000;
 
   /** secondary **/
