--- a/src/pages/Suggest.css
+++ b/src/pages/Suggest.css
@@ -18,8 +18,7 @@
 	width: 95%;
 	border-radius: 20px !important;
 	margin: auto;
-	margin-top: 50px;
-
+	margin-top:10px;
 }
 .swipe__title{
 	color: #000;
@@ -42,13 +41,14 @@
 }
 .swipe__ratingContainer{
 	position: absolute;
-	top: 55px;
+	top: 15px;
 	z-index: 999999;
 	left: 15px;
 	font-size: 35px;
 	background: #000;
 	padding:6px;
 	border-radius: 7px;
+	border-top-left-radius: 20px;
 }
 .swipe__ratingIcon{
 	color: rgb(255, 233, 30);
@@ -61,7 +61,6 @@
 .text-muted{
 	opacity: 0.6;
 }
-
 .action__icon{
 	width: 30px;
 }
@@ -98,4 +97,11 @@
 	left: 50%;
     transform: translate(-50%, 0);	margin-top: 40vh;
 	z-index: 999999;
+}
+.modal__content{
+	padding: 10px;
+}
+.label{
+	font-weight: bold;
+	font-size: 16px;
 }
